add more FE setup + swagger generate API
